# perfect-decimal

./: Cargo.toml  README.md
__util__/: safe-decimal-graph.html  safe-decimal-validate-worker.js  safe-decimal-validate.js
src/: decimal.rs  error.rs  lib.rs
